Make localhost not needing a recaptcha token
- Change both the login and sign-up pages so they don't need a token
- Change application.properties so it is empty string by default if it isn't provided in args
- Change Env.js so the token is null depending if it isn't provided in .env file
- Disable RecaptchFilter if no token is provided
- Restructure the HttpSecurity builder in the WebSecurityConfig